--- a/src/pages/records.astro
+++ b/src/pages/records.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Hero from '../components/Hero.astro';
-import MeetingMenu from '../components/MeetingMenu.astro';
+import { meetings } from '../data/meetings';
 ---
 
 <Layout title="Прошлые встречи">
@@ -12,18 +12,20 @@ import MeetingMenu from '../components/MeetingMenu.astro';
         <header class="text-center bg-black text-white rounded-tl-[17px] rounded-tr-[17px] py-4">
           <h2>прошлые встречи</h2>
         </header>
-        <article class="grid grid-cols-1 md:grid-cols-[auto_1fr]">
-          <div id="date" class="p-8 flex flex-col gap-2 text-center border-b-2 border-black md:border-b-0 md:border-r-2">
-            <span class="text-5xl font-ultra">20</span>
-            <span>октября</span>
-          </div>
-          <div id="topic" class="flex flex-col gap-8 py-8 px-6 md:flex-row md:gap-4">
-            <div class="flex flex-col text-center md:text-start">
-              <h3 class="text-2xl font-ultra">AI: A blessing or a curse</h3>
-              <p>баклажан на островского // 19:00 </p>
+        {meetings.map(meeting => (
+          <article class="grid grid-cols-1 md:grid-cols-[auto_1fr]">
+            <div id="date" class="p-8 flex flex-col gap-2 text-center border-b-2 border-black md:border-b-0 md:border-r-2">
+              <span class="text-5xl font-ultra">20</span>
+              <span>октября</span>
             </div>
-          </div>
-        </article>
+            <div id="topic" class="flex flex-col gap-8 py-8 px-6 md:flex-row md:gap-4">
+              <div class="flex flex-col text-center md:text-start">
+                <h3 class="text-2xl font-ultra">{meeting.topic}</h3>
+                <p><span>{meeting.address}</span> // {meeting.time} </p>
+              </div>
+            </div>
+          </article>
+        ))}
       </section>
       <a href="/" class="inline-block underline mt-8">на главную</a>
     </div>
